Fix SonarCloud Java code smells (Phase 1)
- Extract duplicate 'Show not found with id: ' string into a constant in ShowController
- Add explanatory comment to empty initialize() method in UniqueShowTitleValidator
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in ShowService and test files
- Remove Thread.sleep() from PerformanceTests memory test
- Remove unnecessary 'throws Exception' declaration from databaseQueryPerformance test
- Chain related assertions in ShowServiceTest and EdgeCaseTests

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>